<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@id/sv_root"
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/page_padding_left"
            android:paddingEnd="@dimen/page_padding_right">

            <FrameLayout
                android:id="@+id/fl_anime"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/help_video_height">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/video"
                    android:layout_width="@dimen/help_video_width"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true" />
            </FrameLayout>

            <TextView
                android:id="@id/tv_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fl_anime"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/setup_header_margin_top"
                android:fontFamily="@string/tv_header_font_family"
                android:text="@string/face_intro_title"
                android:textColor="?android:textColorPrimary"
                android:textSize="@dimen/setup_header_text_size" />

            <TextView
                android:id="@id/tv_summary"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_header"
                android:layout_marginTop="@dimen/setup_summary_margin_top"
                android:fontFamily="sans-serif"
                android:text="@string/face_intro_summary"
                android:textColor="?android:textColorSecondary"
                android:textSize="@dimen/setup_body_text_size" />

            <TextView
                android:id="@+id/tv_remember"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_summary"
                android:layout_marginTop="@dimen/setup_remember_margin_top"
                android:fontFamily="sans-serif"
                android:text="@string/face_intro_remember"
                android:textColor="?android:textColorSecondary"
                android:textSize="@dimen/setup_body_text_size" />

            <LinearLayout
                android:id="@+id/ll_first_point"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_remember"
                android:layout_marginTop="@dimen/setup_remember_point_margin_top"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="·"
                    android:textColor="?android:textColorSecondary"
                    android:textSize="@dimen/setup_body_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18.0dip"
                    android:fontFamily="sans-serif"
                    android:text="@string/face_intro_conten_first_point"
                    android:textColor="?android:textColorSecondary"
                    android:textSize="@dimen/setup_body_text_size" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_second_point"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_first_point"
                android:layout_marginTop="@dimen/setup_remember_point_margin_top"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="·"
                    android:textColor="?android:textColorSecondary"
                    android:textSize="@dimen/setup_body_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18.0dip"
                    android:fontFamily="sans-serif"
                    android:text="@string/face_intro_content_second_point"
                    android:textColor="?android:textColorSecondary"
                    android:textSize="@dimen/setup_body_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_second_point"
                android:layout_marginTop="@dimen/setup_remember_point_margin_top"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="·"
                    android:textColor="?android:textColorSecondary"
                    android:textSize="@dimen/setup_body_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18.0dip"
                    android:fontFamily="sans-serif"
                    android:text="@string/face_intro_content_third_point"
                    android:textColor="?android:textColorSecondary"
                    android:textSize="@dimen/setup_body_text_size" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:background="#ffc8c7cc"
        android:visibility="invisible" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingStart="32.0dip"
        android:paddingTop="5.0dip"
        android:paddingEnd="32.0dip"
        android:paddingBottom="20.0dip">

        <Button
            android:id="@+id/info_skip"
            style="@style/SuwGlifButton.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/face_intro_skip" />

        <Button
            android:id="@+id/info_next"
            style="@style/ButtonTextRound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/btn_next" />
    </RelativeLayout>
</LinearLayout>